--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                         <div id="u26_state1" class="panel_state u26_state1" data-label="State2" style="display:none; visibility: hidden;">
                           <div id="u26_state1_content" class="panel_state_content u26_state1_content">
 
-                            <!-- img_landscape (图片) -->
-                            <div id="u29" class="ax_default _图片 u29" data-label="img_landscape">
+                            <!-- img2 (图片) -->
+                            <div id="u29" class="ax_default _图片 u29" data-label="img2">
                               <img id="u29_img" class="img u29_img" src="images/index/img1_u27.png"/>
                               <!-- Unnamed () -->
                               <div id="u30" class="u30 text" style="display:none; visibility: hidden">
@@ -298,8 +298,8 @@
                         <div id="u26-1_state1" class="panel_state u26_state1" data-label="State2" style="display:none; visibility: hidden;visibility: inherit">
                           <div id="u26-1_state1_content" class="panel_state_content u26_state1_content" style="visibility: inherit">
 
-                            <!-- img_landscape (图片) -->
-                            <div id="u29-1" class="ax_default _图片 u29" data-label="img_landscape" style="visibility: inherit">
+                            <!-- img2 (图片) -->
+                            <div id="u29-1" class="ax_default _图片 u29" data-label="img2" style="visibility: inherit">
                               <img id="u29-1_img" class="img u29_img" src="images/index/img1_u27.png"/>
                               <!-- Unnamed () -->
                               <div id="u30-1" class="u30 text" style="display:none; visibility: hidden">
@@ -391,8 +391,8 @@
                         <div id="u26-2_state1" class="panel_state u26_state1" data-label="State2" style="display:none; visibility: hidden;visibility: inherit">
                           <div id="u26-2_state1_content" class="panel_state_content u26_state1_content" style="visibility: inherit">
 
-                            <!-- img_landscape (图片) -->
-                            <div id="u29-2" class="ax_default _图片 u29" data-label="img_landscape" style="visibility: inherit">
+                            <!-- img2 (图片) -->
+                            <div id="u29-2" class="ax_default _图片 u29" data-label="img2" style="visibility: inherit">
                               <img id="u29-2_img" class="img u29_img" src="images/index/img1_u27.png"/>
                               <!-- Unnamed () -->
                               <div id="u30-2" class="u30 text" style="display:none; visibility: hidden">
@@ -484,8 +484,8 @@
                         <div id="u26-3_state1" class="panel_state u26_state1" data-label="State2" style="display:none; visibility: hidden;visibility: inherit">
                           <div id="u26-3_state1_content" class="panel_state_content u26_state1_content" style="visibility: inherit">
 
-                            <!-- img_landscape (图片) -->
-                            <div id="u29-3" class="ax_default _图片 u29" data-label="img_landscape" style="visibility: inherit">
+                            <!-- img2 (图片) -->
+                            <div id="u29-3" class="ax_default _图片 u29" data-label="img2" style="visibility: inherit">
                               <img id="u29-3_img" class="img u29_img" src="images/index/img1_u27.png"/>
                               <!-- Unnamed () -->
                               <div id="u30-3" class="u30 text" style="display:none; visibility: hidden">
@@ -577,8 +577,8 @@
                         <div id="u26-4_state1" class="panel_state u26_state1" data-label="State2" style="display:none; visibility: hidden;visibility: inherit">
                           <div id="u26-4_state1_content" class="panel_state_content u26_state1_content" style="visibility: inherit">
 
-                            <!-- img_landscape (图片) -->
-                            <div id="u29-4" class="ax_default _图片 u29" data-label="img_landscape" style="visibility: inherit">
+                            <!-- img2 (图片) -->
+                            <div id="u29-4" class="ax_default _图片 u29" data-label="img2" style="visibility: inherit">
                               <img id="u29-4_img" class="img u29_img" src="images/index/img1_u27.png"/>
                               <!-- Unnamed () -->
                               <div id="u30-4" class="u30 text" style="display:none; visibility: hidden">
@@ -670,8 +670,8 @@
                         <div id="u26-5_state1" class="panel_state u26_state1" data-label="State2" style="display:none; visibility: hidden;visibility: inherit">
                           <div id="u26-5_state1_content" class="panel_state_content u26_state1_content" style="visibility: inherit">
 
-                            <!-- img_landscape (图片) -->
-                            <div id="u29-5" class="ax_default _图片 u29" data-label="img_landscape" style="visibility: inherit">
+                            <!-- img2 (图片) -->
+                            <div id="u29-5" class="ax_default _图片 u29" data-label="img2" style="visibility: inherit">
                               <img id="u29-5_img" class="img u29_img" src="images/index/img1_u27.png"/>
                               <!-- Unnamed () -->
                               <div id="u30-5" class="u30 text" style="display:none; visibility: hidden">
@@ -763,8 +763,8 @@
                         <div id="u26-6_state1" class="panel_state u26_state1" data-label="State2" style="display:none; visibility: hidden;visibility: inherit">
                           <div id="u26-6_state1_content" class="panel_state_content u26_state1_content" style="visibility: inherit">
 
-                            <!-- img_landscape (图片) -->
-                            <div id="u29-6" class="ax_default _图片 u29" data-label="img_landscape" style="visibility: inherit">
+                            <!-- img2 (图片) -->
+                            <div id="u29-6" class="ax_default _图片 u29" data-label="img2" style="visibility: inherit">
                               <img id="u29-6_img" class="img u29_img" src="images/index/img1_u27.png"/>
                               <!-- Unnamed () -->
                               <div id="u30-6" class="u30 text" style="display:none; visibility: hidden">
